k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: 980195619982.dkr.ecr.ap-south-1.amazonaws.com/auth
          imagePullPolicy: Always
          name: auth
          resources:
            requests:
              cpu: "256m"
              memory: "128Mi"
            limits:
              cpu: "512m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /auth/status/healthz
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /auth/status/healthz
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3000
              name: auth-d-port
