k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notification
  labels:
    name:  notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  notification
  template:
    metadata:
      labels:
        app:  notification
    spec:
      containers:
      - image:  980195619982.dkr.ecr.ap-south-1.amazonaws.com/notification
        imagePullPolicy: Always
        name:  notification
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/notification/health
            port: 4000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/notification/health
            port: 4000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  4000
          name:  noti-port
