k8s/ai-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  ai-service
spec:
  selector:
    app: ai-deployment
  type: ClusterIP
  ports:
  - name:  ai-orch-s-port
    port:  80
    targetPort:  3000
