k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inkz-ingress
  labels:
    app.kubernetes.io/name: inkz-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
   

    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"




spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/sandbox"
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80



    - http:
        paths:
          - pathType: Prefix
            path: "/api/ai"
            backend:
              service:
                name: ai-service
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: "/api/auth"
            backend:
              service:
                name: auth-service
                port:
                  number: 80
                  
    - host: "*.preview.clickking.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80

    - host: "*.agent.clickking.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80
